--- a/views/page.erb
+++ b/views/page.erb
@@ -6,8 +6,9 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.16/backbone.localStorage-min.js"></script>
-<script type="text/javascript" src="libs/q.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.2/q.min.js"></script>
 <script type="text/javascript" src="libs/templateFromUrl.js"></script>
+<script type="text/javascript" src="libs/tweetParser.js"></script>
 
 <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
@@ -46,7 +47,7 @@
 	<div id="tweets1" class="tweets_window"></div>
 	<div id="tweets2" class="tweets_window"></div>
 	<div id="tweets3" class="tweets_window"></div>
-	<div style="clear:both"></div>
+	<div class="clearfix"></div>
 	<p>(Check out the <a href="https://dev.twitter.com/docs/api/1/get/statuses/user_timeline" target="_blank">User Timeline</a> API)
 
 	</p><p>Each tweet should include at minimum:
