--- a/views/page.erb
+++ b/views/page.erb
@@ -3,13 +3,14 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style type="text/css"></style>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.16/backbone.localStorage.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/q.js/0.9.2/q.min.js"></script>
 <script type="text/javascript" src="libs/templateFromUrl.js"></script>
 <script type="text/javascript" src="libs/tweetParser.js"></script>
 
+<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.11.2/themes/cupertino/jquery-ui.css">
 <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
 <script type="text/javascript" src="models/TwitterAuthModel.js"></script>
@@ -17,6 +18,7 @@
 <script type="text/javascript" src="models/TweetsModel.js"></script>
 <script type="text/javascript" src="views/TwitterWindowView.js"></script>
 <script type="text/javascript" src="views/PreferencesView.js"></script>
+<script type="text/javascript" src="router.js"></script>
 <script type="text/javascript" src="application.js"></script>
 
 </head><body>
@@ -43,7 +45,7 @@
 
 	</p>
 	</div>
-	<div id="preferences"></div>
+	<div id="preferences_view"></div>
 	<div class="tweets_container">
 		<div id="tweets0" class="tweets_window"></div>
 		<div id="tweets1" class="tweets_window"></div>
